fixed issue where submit button text was not visible on mobile

--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ fieldset p {
   align-self: center;
   margin-bottom: 1rem;
   font-family: 'Noto Sans', sans-serif;
+  color: black;
   font-weight: 600;
   background-color: white;
   border: 1px solid silver;
